--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=mailgun
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@dragg.me
+MAIL_PASSWORD=99869729fe54b67328210e691a1c1b34
+MAILGUN_DOMAIN=dragg.me
+MAILGUN_SECRET=key-56c2e4baf757901756b142b3ed1226d9
+MAIL_ENCRYPTION=tls
