Added config for sending email and changed required fileds in contact form

--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,11 @@ REDIS_PORT=6379
 MAIL_DRIVER=mailgun
 MAIL_HOST=smtp.mailgun.org
 MAIL_PORT=587
-MAIL_USERNAME=postmaster@dragg.me
-MAIL_PASSWORD=99869729fe54b67328210e691a1c1b34
-MAILGUN_DOMAIN=dragg.me
-MAILGUN_SECRET=key-56c2e4baf757901756b142b3ed1226d9
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
 MAIL_ENCRYPTION=tls
+
+CREDENTIALS_EMAIL=
+CREDENTIALS_NAME=
